--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && scp -r ./build/* german_sklyarov@51.250.7.113:/home/german_sklyarov/movies-explorer-frontend"
   },
   "eslintConfig": {
     "extends": [
